2006-03-18  Michael Natterer  <mitch@gimp.org>

	* tools/pdbgen/pdb/unit.pdb: got rid of all perl utility
	functions.

	* app/pdb/unit_cmds.c: regenerated.

2006-03-18  Michael Natterer  <mitch@gimp.org>

	* tools/pdbgen/pdb/drawable.pdb: got rid of all perl utility
	functions.

	* app/pdb/drawable_cmds.c
	* libgimp/gimpdrawable_pdb.c: regenerated.

2006-03-18  Michael Natterer  <mitch@gimp.org>

	* tools/pdbgen/app.pl: removed support for arg->on_success and
	arg->on_fail.

	* tools/pdbgen/pdb/gradient_select.pdb
	* tools/pdbgen/pdb/gradients.pdb
	* tools/pdbgen/pdb/paint_tools.pdb
	* tools/pdbgen/pdb/selection_tools.pdb: moved their logic to the C
	code.

	* app/pdb/gradient_select_cmds.c
	* app/pdb/gradients_cmds.c
	* app/pdb/paint_tools_cmds.c
	* app/pdb/selection_tools_cmds.c: regenerated.

2006-03-17  Sven Neumann  <sven@gimp.org>

	* plug-ins/common/lic.c: applied a patch from Karine Delvare that
	fixes a performance problem in the Van Gogh plug-in (bug #113615).

2006-03-17  Manish Singh  <yosh@gimp.org>

	* plug-ins/pygimp/gimpplugin.py: _run should pass on the return
	value. Fixes bug #334874.

2006-03-17  Michael Natterer  <mitch@gimp.org>

	* tools/pdbgen/pdb.pl: generically map NULL to -1 when returning
	object IDs.

	* tools/pdbgen/app.pl: remove support for "return_fail => foo"
	which did the same on a per-return-value basis. Removed some more
	obscure perl without any effect on the generated code.

	* tools/pdbgen/pdb/image.pdb
	* tools/pdbgen/pdb/text_tool.pdb: don't use "return_fail => foo".

	* app/pdb/channel_cmds.c
	* app/pdb/display_cmds.c
	* app/pdb/drawable_cmds.c
	* app/pdb/drawable_transform_cmds.c
	* app/pdb/edit_cmds.c
	* app/pdb/fileops_cmds.c
	* app/pdb/image_cmds.c
	* app/pdb/layer_cmds.c
	* app/pdb/selection_cmds.c
	* app/pdb/transform_tools_cmds.c
	* app/pdb/vectors_cmds.c: regenerated.

2006-03-17  Michael Natterer  <mitch@gimp.org>

	* tools/pdbgen/pdb/image.pdb: removed all remaining utility