@@ -81,7 +81,8 @@ static GimpActionEntry plug_in_actions[] =
   { "plug-in-animation-menu",         NULL, N_("An_imation")        },
 
   { "plug-in-reset-all", GIMP_STOCK_RESET,
-    N_("Reset all _Filters"), NULL, NULL,
+    N_("Reset all _Filters"), NULL,
+    N_("Set all plug-in to their default settings"),
     G_CALLBACK (plug_in_reset_all_cmd_callback),
     GIMP_HELP_FILTER_RESET_ALL }
 };
@@ -89,12 +90,14 @@ static GimpActionEntry plug_in_actions[] =
 static GimpEnumActionEntry plug_in_repeat_actions[] =
 {
   { "plug-in-repeat", GTK_STOCK_EXECUTE,
-    N_("Re_peat Last"), "<control>F", NULL,
+    N_("Re_peat Last"), "<control>F",
+    N_("Rerun the last used plug-in using the same settings"),
     0, FALSE,
     GIMP_HELP_FILTER_REPEAT },
 
   { "plug-in-reshow", GIMP_STOCK_RESHOW_FILTER,
-    N_("R_e-Show Last"), "<control><shift>F", NULL,
+    N_("R_e-Show Last"), "<control><shift>F",
+    N_("Show the last used plug-in dialog again"),
     0, FALSE,
     GIMP_HELP_FILTER_RESHOW }
 };
