@@ -48,67 +48,73 @@ static GimpActionEntry select_actions[] =
 
   { "select-all", GIMP_STOCK_SELECTION_ALL,
     N_("_All"), "<control>A",
-    N_("Select all"),
+    N_("Select everything"),
     G_CALLBACK (select_all_cmd_callback),
     GIMP_HELP_SELECTION_ALL },
 
   { "select-none", GIMP_STOCK_SELECTION_NONE,
     N_("_None"), "<control><shift>A",
-    N_("Select none"),
+    N_("Dismiss the selection"),
     G_CALLBACK (select_none_cmd_callback),
     GIMP_HELP_SELECTION_NONE },
 
   { "select-invert", GIMP_STOCK_INVERT,
     N_("_Invert"), "<control>I",
-    N_("Invert selection"),
+    N_("Invert the selection"),
     G_CALLBACK (select_invert_cmd_callback),
     GIMP_HELP_SELECTION_INVERT },
 
   { "select-float", GIMP_STOCK_FLOATING_SELECTION,
-    N_("_Float"), "<control><shift>L", NULL,
+    N_("_Float"), "<control><shift>L",
+    N_("Create a floating selection"),
     G_CALLBACK (select_float_cmd_callback),
     GIMP_HELP_SELECTION_FLOAT },
 
   { "select-feather", NULL,
-    N_("Fea_ther..."), NULL, NULL,
+    N_("Fea_ther..."), NULL,
+    N_("Blur the selection border so that it fades out smoothly"),
     G_CALLBACK (select_feather_cmd_callback),
     GIMP_HELP_SELECTION_FEATHER },
 
   { "select-sharpen", NULL,
-    N_("_Sharpen"), NULL, NULL,
+    N_("_Sharpen"), NULL,
+    N_("Remove fuzzyness from the selection"),
     G_CALLBACK (select_sharpen_cmd_callback),
     GIMP_HELP_SELECTION_SHARPEN },
 
   { "select-shrink", GIMP_STOCK_SELECTION_SHRINK,
-    N_("S_hrink..."), NULL, NULL,
+    N_("S_hrink..."), NULL,
+    N_("Contract the selection"),
     G_CALLBACK (select_shrink_cmd_callback),
     GIMP_HELP_SELECTION_SHRINK },
 
   { "select-grow", GIMP_STOCK_SELECTION_GROW,
-    N_("_Grow..."), NULL, NULL,
+    N_("_Grow..."), NULL,
+    N_("Enlarge the selection"),
     G_CALLBACK (select_grow_cmd_callback),
     GIMP_HELP_SELECTION_GROW },
 
   { "select-border", GIMP_STOCK_SELECTION_BORDER,
-    N_("Bo_rder..."), NULL, NULL,
+    N_("Bo_rder..."), NULL,
+    N_("Replace the selection by its border"),
     G_CALLBACK (select_border_cmd_callback),
     GIMP_HELP_SELECTION_BORDER },
 
   { "select-save", GIMP_STOCK_SELECTION_TO_CHANNEL,
     N_("Save to _Channel"), NULL,
-    N_("Save selection to channel"),
+    N_("Save the selection to a channel"),
     G_CALLBACK (select_save_cmd_callback),
     GIMP_HELP_SELECTION_TO_CHANNEL },
 
   { "select-stroke", GIMP_STOCK_SELECTION_STROKE,
     N_("_Stroke Selection..."), NULL,
-    N_("Stroke selection..."),
+    N_("Paint along the selection outline"),
     G_CALLBACK (select_stroke_cmd_callback),
     GIMP_HELP_SELECTION_STROKE },
 
   { "select-stroke-last-values", GIMP_STOCK_SELECTION_STROKE,
     N_("_Stroke Selection"), NULL,
-    N_("Stroke selection with last values"),
+    N_("Stroke the selection with last used values"),
     G_CALLBACK (select_stroke_last_vals_cmd_callback),
     GIMP_HELP_SELECTION_STROKE }
 };
